fix aligning for list in the integration block

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -152,11 +152,14 @@
     }
 
     ul {
-      list-style: none;
       margin-bottom: 0;
+
+      list-style: none;
 
       @include bp-up(xl) {
         display: inline-flex;
+        justify-content: center;
+
         margin: 0 #{-$li-p-x};
       }
     }
